@@ -7342,7 +7342,7 @@ F.$websocketcontinue_process = function(route, req, path) {
 
 	var socket = req.websocket;
 
-	if (!socket.prepare(route.flags, route.protocols, route.allow, route.length, F.version_header)) {
+	if (!socket.prepare(route.flags, route.protocols, route.allow, route.length)) {
 		socket.close();
 		req.connection.destroy();
 		return;
@@ -13347,18 +13347,25 @@ WebSocketClient.prototype.prepare = function(flags, protocols, allow, length) {
 	allow = allow || EMPTYARRAY;
 
 	var self = this;
+
+	if (SOCKET_ALLOW_VERSION.indexOf(U.parseInt(self.req.headers['sec-websocket-version'])) === -1)
+		return false;
+
 	self.length = length;
 
 	var origin = self.req.headers['origin'] || '';
 	var length = allow.length;
 
-	if (length) {
-		if (allow.indexOf('*') === -1) {
-			for (var i = 0; i < length; i++) {
-				if (origin.indexOf(allow[i]) === -1)
-					return false;
+	if (length && allow.indexOf('*') === -1) {
+		var is = false;
+		for (var i = 0; i < length; i++) {
+			if (origin.indexOf(allow[i]) !== -1) {
+				is = true;
+				break;
 			}
 		}
+		if (!is)
+			return false;
 	}
 
 	length = protocols.length;
@@ -13368,9 +13375,6 @@ WebSocketClient.prototype.prepare = function(flags, protocols, allow, length) {
 				return false;
 		}
 	}
-
-	if (SOCKET_ALLOW_VERSION.indexOf(U.parseInt(self.req.headers['sec-websocket-version'])) === -1)
-		return false;
 
 	var compress = (F.config['allow-websocket-compression'] && self.req.headers['sec-websocket-extensions'] || '').indexOf('permessage-deflate') !== -1;
 	var header = protocols.length ? (compress ? SOCKET_RESPONSE_PROTOCOL_COMPRESS : SOCKET_RESPONSE_PROTOCOL).format(self.$websocket_key(self.req), protocols.join(', ')) : (compress ? SOCKET_RESPONSE_COMPRESS : SOCKET_RESPONSE).format(self.$websocket_key(self.req));
